tup/parse/testdata/error/review/function_declarations.tup
# missing function body
add = fn(x: Int, y: Int) Int

error: expecting "function body", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:29

# missing return type for fn
add = fn(x: Int, y: Int) {
    x + y
}

error: expecting "return type or _", got "{"
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:1:26

# unclosed parameter list
add = fn(x: Int, y: Int {
    x + y
}

error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:3:2

# function body missing closing brace
add = fn(x: Int, y: Int) Int {
    x + y

error: expecting "}", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/function_declarations.tup:2:10
